--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ next-env.d.ts
 # misc
 .DS_Store
 *.pem
+.prettierrc
 
 # debug
 npm-debug.log*
@@ -35,6 +36,7 @@ yarn-error.log*
 # do not commit any .env files to git, except for the .env.example file. https://create.t3.gg/en/usage/env-variables#using-environment-variables
 .env
 .env*.local
+.env-e
 
 # vercel
 .vercel
