--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "eslint-config-next": "^14.1.3",
     "eslint-plugin-drizzle": "^0.2.3",
     "postcss": "^8.4.34",
-    "prettier": "^3.2.5",
+    "prettier": "3.3.2",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.2"
